[XForms] fixing required bind for all submission methods. Bug 326452, patch by sspeiche, r=doronr+allan